Added Contact page, modified about and app colors

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,2 @@
-<h1>About Us</h1>
-<p>We are working our one month rails pinteresting app</p>
+<h1>About</h1>
+<p>I'm a web designer at <%= link_to "Cold Spring", "http://www.coldspringdesign.com" %> and this is my pinteresting app created following the excellent <%= link_to "One Month Rails", "http://onemonth.com" %> course!</p>
