--- a/app/assets/stylesheets/bootstrap_and_customization.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.scss
@@ -1,4 +1,4 @@
-$body-bg: #34495e;
+$body-bg: #fff;
 $navbar-inverse-bg: #2c3e50;
 $navbar-inverse-link-color: rgba(255,255,255,.8);
 $brand-primary: orange;
