--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,2 @@
 <h1>About</h1>
-<p>I'm a web designer at <%= link_to "Cold Spring", "http://www.coldspringdesign.com" %> and this is my pinteresting app created following the excellent <%= link_to "One Month Rails", "http://onemonth.com" %> course!</p>
+<p>I'm a web designer &amp; developer at <%= link_to "Cold Spring", "http://www.coldspringdesign.com" %> and this is my pinteresting app created following the excellent <%= link_to "One Month Rails", "http://onemonth.com" %> course!</p>
