--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
 <div class="jumbotron">
-<h1>Welcome to my app!</h1>
-<p>Click here to <%= link_to "Sign Up", "#", class:"btn btn-primary btn-lg" %></p>
+<h1 class="center">Welcome to my app!</h1>
+<p class="center"><%= link_to "Sign In", "#", class:"btn btn-default btn-lg" %> <%= link_to "Create Account", "#", class:"btn btn-primary btn-lg" %></p>
 </div>
