--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,12 @@
 
 	<%= render 'layouts/header' %>
 	<div class="container">
+
+		<!-- This is a ruby block -->
+		<% flash.each do |name, msg| %>
+			<%= content_tag(:div, msg, class: "alert alert-info") %>
+		<% end %>
+
 		<!-- All page content is in the yield -->
 		<%= yield %>
 	</div>
