--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,16 @@
-<div class="jumbotron">
-<h1 class="center">Welcome to my app!</h1>
-<p class="center"><%= link_to "Sign In", "#", class:"btn btn-default btn-lg" %> <%= link_to "Create Account", "#", class:"btn btn-primary btn-lg" %></p>
+<div class="jumbotron center">
+	<h1>Welcome to my app!</h1>
+
+	<% if user_signed_in? %>
+	
+	#do somthing
+	
+	<% else %>
+		
+		<p>
+			<%= link_to "Log In", new_user_session_path, class:"btn btn-default btn-lg" %>
+			<%= link_to "Sign Up", new_user_registration_path, class:"btn btn-primary btn-lg" %>
+		</p>
+
+	<% end %>
 </div>
