Update show view, add glyphicons and change root path

--- a/app/assets/stylesheets/bootstrap_and_customization.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.scss
@@ -5,6 +5,7 @@ $brand-primary: tomato;
 $font-family-sans-serif: 'Open Sans', sans-serif;
 $jumbotron-bg: #fff;
 
+@import "bootstrap-sprockets";
 @import 'bootstrap';
 
 .center {
