--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -25,3 +25,7 @@
     </div><!-- box -->
   <% end %>
 </div>
+
+<div class="center">
+  <%= will_paginate @posts, renderer: BootstrapPagination::Rails %>
+</div>
